--- a/src/main/webapp/element/header.html
+++ b/src/main/webapp/element/header.html
@@ -51,9 +51,9 @@
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/forms">
-                    <i class="align-middle" data-feather="check-square"></i> <span
-                        class="align-middle">Forms</span>
+                <a class="sidebar-link" href="/admin/sound">
+                    <i class="align-middle" data-feather="feather feather-speaker"></i> <span
+                        class="align-middle">Sound</span>
                 </a>
             </li>
 
@@ -81,7 +81,7 @@
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/charts">
+                <a class="sidebar-link" href="/icon-feather">
                     <i class="align-middle" data-feather="bar-chart-2"></i> <span
                         class="align-middle">Charts</span>
                 </a>
