--- a/src/main/webapp/element/header.html
+++ b/src/main/webapp/element/header.html
@@ -10,7 +10,7 @@
             </li>
 <!--            <li class="sidebar-item active">-->
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/">
+                <a class="sidebar-link" href="">
                     <i class="align-middle" data-feather="sliders"></i> <span
                         class="align-middle">Dashboard</span>
                 </a>
